feat: add autopilot HA API
